stateDiagram-v2
    direction LR
    [*] --> DRAFT
    DRAFT --> SUBMITTED: APPLICANT submits
    SUBMITTED --> UNDER_REVIEW: REVIEWER begins review
    UNDER_REVIEW --> PENDING_ADDITIONAL_INFO: REVIEWER requests info
    UNDER_REVIEW --> REVIEWED: REVIEWER submits review
    PENDING_ADDITIONAL_INFO --> UNDER_REVIEW: APPLICANT resubmits
    REVIEWED --> APPROVED: APPROVER decides
    REVIEWED --> REJECTED: APPROVER decides
    APPROVED --> [*]
    REJECTED --> [*]
